# useless_raytracer

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  HitPayload.h  Material.h  RayClass.cpp  RayClass.h  RayHit.cpp  RayHit.h  RenderableObject.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Settings.h  Sphere.cpp  Sphere.h  Utils.cpp  Utils.h  Viewport.cpp  Viewport.h  main.cpp  ray_project.cpp
graphics/: Shader.cpp  ShaderStorageBuffer.cpp  Texture.cpp  UniformBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp  graphics.h
shaders/: copy_shader.comp  fragment_shader.frag  raytracing_shader.comp  vertex_shader.vert
